fixed max height for images, fixed max no of uploads + overflow for myspaces

--- a/app/assets/stylesheets/app/main.scss
+++ b/app/assets/stylesheets/app/main.scss
@@ -435,6 +435,8 @@ map {
 .owl-carousel .img-thumbnail {
   border: 0;
   padding: 0;
+  max-width: 100% !important;
+  max-height: 30vh !important;
   &:hover {
     box-shadow: 5px 5px $gray-400;
     cursor: pointer;
